Lots of changes... Timer is more or less usable now

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject",
         "electron-dev": "concurrently \"BROWSER=none yarn start\" \"wait-on http://localhost:3000 && electron .\"",
-        "electron-pack": "build -mw --em.main=build/electron.js --prepackaged ",
-        "_preelectron-pack": "yarn build"
+        "electron-pack": "build -mw --em.main=build/electron.js",
+        "preelectron-pack": "yarn build"
     },
     "build": {
         "appId": "com.arvindbalaji.debatetimer",
